remove deprecated call using Long constructor (#574)